--- a/src/app/views/scripts/view/summary.phtml
+++ b/src/app/views/scripts/view/summary.phtml
@@ -180,8 +180,10 @@
   <br/>
 <? endif ?>
 
-<span class="permalink"><b>Permanent url:</b> <a href="<?= $this->etd->ark() ?>"><?= $this->etd->ark() ?></a></span>
-<br />
-</span><span class="permalink"><span class="doi" style="display:block;float:left;width:115px"><a href="<?= $this->etd->doi() ?>"><?= $this->etd->doi() ?></a></span>
+<span class="permalink">
+    <b>Permanent url:</b> <a href="<?= $this->etd->ark() ?>"><?= $this->etd->ark() ?></a>
+    <br />
+    <span class="doi"></span><a href="<?= $this->etd->doi() ?>"><?= $this->etd->doi() ?></a>
+</span>
 <? /* TEMPORARY: suppressing unAPI for now, so COinS will be picked up instead
     <abbr class="unapi-id" title="<?= $this->etd->ark() ?>"> </abbr> */ ?>
