--- a/trunk/src/public/css/etd.css
+++ b/trunk/src/public/css/etd.css
@@ -946,7 +946,7 @@ div.letters { text-align:center; border:1px solid grey; padding:2px; }
 div.letters a { text-decoration:none; font-size:115%; padding:0px 2px;}
 div.letters a.current { font-weight:bold; }
 
-span.permalink { background-color: #ffda82; /*#fffdee; /* very faint yellow */ }
+span.permalink { background-color: #ffda82; min-width: 400px; display: inline-block; /*#fffdee; /* very faint yellow */ }
 span.doi { display: inline-block; min-width: 125px; }
 
 /* formatting used by FCKeditor -- explicitly include divs to override other formatting */
