--- a/trunk/src/app/views/scripts/view/summary.phtml
+++ b/trunk/src/app/views/scripts/view/summary.phtml
@@ -183,7 +183,7 @@
 <span class="permalink">
     <b>Permanent url:</b> <a href="<?= $this->etd->ark() ?>"><?= $this->etd->ark() ?></a>
     <br />
-    <span class="doi"></span><a href="<?= $this->etd->doi() ?>"><?= $this->etd->doi() ?></a>
+    <span class="doi"></span><a href="<?= $this->etd->doiURI() ?>"><?= $this->etd->doi() ?></a>
 </span>
 <? /* TEMPORARY: suppressing unAPI for now, so COinS will be picked up instead
     <abbr class="unapi-id" title="<?= $this->etd->ark() ?>"> </abbr> */ ?>
