--- a/trunk/src/app/views/scripts/view/summary.phtml
+++ b/trunk/src/app/views/scripts/view/summary.phtml
@@ -168,7 +168,7 @@
      <? endif ?>
      <? if ($this->etd->doiURI()): ?>
         <br />
-        <b>DOI</b> <a href="<?= $this->etd->doiURI() ?>"><?= $this->etd->doiURI() ?></a>
+        <b>DOI:</b> <a href="<?= $this->etd->doiURI() ?>"><?= $this->etd->doiURI() ?></a>
     <? endif ?>
      <br/>
 
