--- a/trunk/src/app/layouts/scripts/sidenav.phtml
+++ b/trunk/src/app/layouts/scripts/sidenav.phtml
@@ -9,9 +9,9 @@
 
 <div class="section">
   <p><a href="https://vmch-etd.library.emory.edu/docs/contact">Contact Us</a></p>
-  <p><a href="<?= $this->url(array("controller" => "docs", "action" => "about"), '', true); ?>">Contact Us</a></p>
+  <p><a href="https://vmch-etd.library.emory.edu/docs/instructions">Instructions</a></p>
   <p><a href="<?= $this->url(array("controller" => "docs", "action" => "faq"), '', true); ?>">Frequently Asked Questions</a></p>
-  <p><a href="<?= $this->url(array("controller" => "docs"), '', true); ?>/help" class="help">ETD Help</a></p>
+  <p><a href="https://vmch-etd.library.emory.edu/help">ETD Help</a></p>
   <p><a href="<?= $this->url(array("controller" => "docs", "action" => "policies"), '', true); ?>">Policies and Procedures</a></p>
   <p><a href="<?= $this->url(array("controller" => "docs", "action" => "ip"), '', true); ?>">Copyright and Patents</a></p>
 </div>
@@ -37,6 +37,8 @@
 
   <div class="section">
     <p><a href="http://www.emory.edu/GSOAS/">Laney Graduate School</a></p>
+    <p><a href="https://www.sph.emory.edu/">Rollins School of Public Health</a></p>
+    <p><a href="http://candler.emory.edu/index.html">Candler School of Theology</a></p>
     <p><a href="http://www.college.emory.edu/">Emory College</a></p>
     <p><a href="http://www.emory.edu/libraries.cfm">Emory Libraries</a></p>
   </div>
