--- a/src/app/layouts/scripts/sidenav.phtml
+++ b/src/app/layouts/scripts/sidenav.phtml
@@ -8,7 +8,7 @@
 
 
 <div class="section">
-  <p><a href="https://vmch-etd.library.emory.edu/docs/contact">Contact Us</a></p>
+  <p><a href="docs/contact">Contact Us</a></p>
   <p><a href="https://vmch-etd.library.emory.edu/docs/instructions">Instructions</a></p>
   <p><a href="<?= $this->url(array("controller" => "docs", "action" => "faq"), '', true); ?>">Frequently Asked Questions</a></p>
   <p><a href="https://vmch-etd.library.emory.edu/help">ETD Help</a></p>
