--- a/trunk/src/app/layouts/scripts/sidenav.phtml
+++ b/trunk/src/app/layouts/scripts/sidenav.phtml
@@ -11,7 +11,7 @@
   <p><a href="/docs/contact">Contact Us</a></p>
   <p><a href="/docs/instructions">Instructions</a></p>
   <p><a href="<?= $this->url(array("controller" => "docs", "action" => "faq"), '', true); ?>">Frequently Asked Questions</a></p>
-  <p><a href="https://vmch-etd.library.emory.edu/help">ETD Help</a></p>
+  <p><a href="/help">ETD Help</a></p>
   <p><a href="<?= $this->url(array("controller" => "docs", "action" => "policies"), '', true); ?>">Policies and Procedures</a></p>
   <p><a href="<?= $this->url(array("controller" => "docs", "action" => "ip"), '', true); ?>">Copyright and Patents</a></p>
 </div>
