Added link for embargo info.

--- a/src/app/layouts/scripts/sidenav.phtml
+++ b/src/app/layouts/scripts/sidenav.phtml
@@ -14,6 +14,7 @@
   <p><a href="/help">ETD Help</a></p>
   <p><a href="<?= $this->url(array("controller" => "docs", "action" => "policies"), '', true); ?>">Policies and Procedures</a></p>
   <p><a href="<?= $this->url(array("controller" => "docs", "action" => "ip"), '', true); ?>">Copyright and Patents</a></p>
+  <p><a href="<?= $this->url(array("controller" => "docs", "action" => "embargo"), '', true); ?>">Access Restrictions</a></p>
 </div>
 
 <? if (! $this->suppress_sidenav_browse): ?>
