update successful submission message.

--- a/src/app/views/scripts/submission/success.phtml
+++ b/src/app/views/scripts/submission/success.phtml
@@ -3,8 +3,7 @@ repository.</p>
 
 
 <? if ($this->etd->schoolId() == "grad"): //Grad school ?>
-<p>Remember to print the PDF version of your dissertation and submit a paper
-copy to the Graduate School for the Dean's review.</p>
+<p>Remember to submit all forms to the Graduate School.</p>
 
 <p>You will receive an e-mail notification confirming whether or not
 your thesis or dissertation has been approved by the Graduate School.  You may
