--- a/src/app/views/scripts/index/_submission.phtml
+++ b/src/app/views/scripts/index/_submission.phtml
@@ -1,8 +1,8 @@
-<? if (isset($this->current_user) && $this->current_user->hasUnpublishedEtd()): ?>
-  <? $user_etds = $this->current_user->getEtds(); ?>
+<? if (isset($this->current_user) && $this->current_user->hasUnpublishedEtd() && sizeOf($this->current_user->getUsersEtds()) > 0): ?>
+  <? $user_etds = $this->current_user->getUsersEtds(); ?>
 <div class="notice">
     Your submission, <a class="etd-title" href="<?= $this->url(array("controller" => "view",
-	"action" => "record", "pid" => $user_etds[0]->pid)) ?>"><?= $user_etds[0]->title(); ?></a>,
+    "action" => "record", "pid" => $user_etds[0]->pid)) ?>"><?= $user_etds[0]->title(); ?></a>,
     is currently in <b><?= $user_etds[0]->status() ?></b> status.
-</div>    
-<? endif ?>       
+</div>
+<? endif ?>
